tests/baselines/reference/parser537152.errors.txt
tests/cases/conformance/parser/ecmascript5/RegressionTests/parser537152.ts(2,9): error TS2532: Object is possibly 'undefined'.


==== tests/cases/conformance/parser/ecmascript5/RegressionTests/parser537152.ts (1 errors) ====
    var t;
    var y = t.e1;
            ~
!!! error TS2532: Object is possibly 'undefined'.
    